Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4850

HA Sporadic stall in ha_tests.test_failover_send_receive

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.22
    • 0.24
    • C++ Clustering
    • None

    Description

      To reproduce: in a loop call
      ha_tests.py *.test_failover_send_receive
      The test occasionally fails with a message like:

      ha_tests.LongTests.test_failover_send_receive .................................................... start
      Traceback (most recent call last):
      File "/home/aconway/qpid/qpid/cpp/src/tests/ha_tests.py", line 978, in test_failover_send_receive
      map(wait_passed, receivers, checkpoint)
      File "/home/aconway/qpid/qpid/cpp/src/tests/ha_tests.py", line 946, in wait_passed
      assert retry(check), "Stalled %s at %s"%(r.queue, n)
      AssertionError: Stalled test8 at 2107
      ha_tests.LongTests.test_failover_send_receive .................................................... fail
      Error during test: Traceback (most recent call last):
      File "/home/aconway/qpid/build2/src/tests/python/commands/qpid-python-test", line 340, in run
      phase()
      File "/home/aconway/qpid/qpid/cpp/src/tests/ha_tests.py", line 993, in test_failover_send_receive
      for r in receivers: r.stop()
      File "/home/aconway/qpid/qpid/cpp/src/tests/brokertest.py", line 625, in stop
      join(self)
      File "/home/aconway/qpid/qpid/cpp/src/tests/brokertest.py", line 485, in join
      if thread.isAlive(): raise Exception("Timed out joining thread %s"%thread)
      Exception: Timed out joining thread <NumberedReceiver(Thread-20, started 140175095092992)>

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: