QPID-4850: HA Sporadic stall in ha_tests.test_failover_send_receive

Fixed a deadlock in the test: test was killing a backup broker then waiting to
pass a checkpoint: however if the backup was expected by the primary, the primary
holds queues till it connects, so we deadlock.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1483107 13f79535-47bb-0310-9956-ffa450edef68