cpp/src/qpid/ha/ReplicatingSubscription.h
@@ -61,8 +61,8 @@ class QueueGuard;
  *
  * Lifecycle: broker::Queue holds shared_ptrs to this as a consumer.
  *
- * Lock Hierarchy: ReplicatingSubscription MUS NOT call QueueGuard with it's lock held
- * QueueGuard MAY call ReplicatingSubscription with it's lock held.
+ * Lock Hierarchy: ReplicatingSubscription MUST NOT call QueueGuard with its
+ * lock held QueueGuard MAY call ReplicatingSubscription with its lock held.
  */
 class ReplicatingSubscription : public broker::SemanticState::ConsumerImpl
 {
